Use private agent pool

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,10 +2,10 @@ trigger:
 - '*'
 
 pool:
-  name: 'SasAgentPool'
+  name: 'MyAgentPool'
   demands:
   - npm
-#testis
+
 variables:
   buildConfiguration: 'Release'
   wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
